# meld-serial

./: .gitignore  CMakeLists.txt  README.md
analysis/: .gitignore  functions.R  local.Rproj  serial_fanout.tsv  serial_node_timing.md  serial_node_timing.qmd  serial_node_timinig.md  serial_node_timinig.qmd
analysis/serial_node_timing_files/: .gitignore
metaprogramming/: type_deduction.hpp
metaprogramming/detail/: parameter_types.hpp  return_type.hpp
reduction/: CMakeLists.txt  reduction_node.hpp
resource_limiting/: CMakeLists.txt  resource_limiter.hpp  rl_function_node.hpp  sized_tuple.hpp  thread_counter.hpp  timed_busy.cpp
serial/: CMakeLists.txt  resource_limiter.cpp  resource_limiter.hpp  serial_node.hpp  serializer_node.cpp  serializer_node.hpp  sized_tuple.hpp  timed_busy.cpp  timed_busy.hpp
short_circuiter/: message.hpp  short_circuiter_node.hpp  simple_short_circuiter_node.hpp  timer.hpp
test/: CMakeLists.txt  reduction.cpp  resource_limited_diamond.cpp  resource_limited_fanout.cpp  serial_diamond.cpp  serial_fanout.cpp  serializer-scary.cpp  serializer.cpp  short_circuiting.cpp  test_timed_busy.cpp
